// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildShaderSource > can inject linear to srgb conversion for output color 1`] = `
"
struct FragkitFrame {
	time: f32,
	delta: f32,
	resolution: vec2f,
};

struct FragkitUniforms {
	uMix: f32,
};

@group(0) @binding(0) var<uniform> fragkitFrame: FragkitFrame;
@group(0) @binding(1) var<uniform> fragkitUniforms: FragkitUniforms;


fn fragkitLinearToSrgb(linearColor: vec3f) -> vec3f {
	let cutoff = vec3f(0.0031308);
	let lower = linearColor * 12.92;
	let higher = vec3f(1.055) * pow(linearColor, vec3f(1.0 / 2.4)) - vec3f(0.055);
	return select(lower, higher, linearColor > cutoff);
}


struct FragkitVertexOut {
	@builtin(position) position: vec4f,
	@location(0) uv: vec2f,
};

@vertex
fn fragkitVertex(@builtin(vertex_index) index: u32) -> FragkitVertexOut {
	var positions = array<vec2f, 3>(
		vec2f(-1.0, -3.0),
		vec2f(-1.0, 1.0),
		vec2f(3.0, 1.0)
	);

	let position = positions[index];
	var out: FragkitVertexOut;
	out.position = vec4f(position, 0.0, 1.0);
	out.uv = (position + vec2f(1.0, 1.0)) * 0.5;
	return out;
}

fn frag(uv: vec2f) -> vec4f { return vec4f(uv, 0.0, 1.0); }

@fragment
fn fragkitFragment(in: FragkitVertexOut) -> @location(0) vec4f {
	
	let fragColor = frag(in.uv);
	let fragkitKeepAlive = fragkitUniforms.uMix;
	let fragkitLinear = vec4f(fragColor.rgb + fragkitKeepAlive * 0.0, fragColor.a);
	let fragkitSrgb = fragkitLinearToSrgb(max(fragkitLinear.rgb, vec3f(0.0)));
	return vec4f(fragkitSrgb, fragkitLinear.a);

}
"
`;

exports[`buildShaderSource > injects user uniforms and frag wrapper 1`] = `
"
struct FragkitFrame {
	time: f32,
	delta: f32,
	resolution: vec2f,
};

struct FragkitUniforms {
	intensity: vec4f,
	tint: vec4f,
};

@group(0) @binding(0) var<uniform> fragkitFrame: FragkitFrame;
@group(0) @binding(1) var<uniform> fragkitUniforms: FragkitUniforms;
@group(0) @binding(2) var uTexture1Sampler: sampler;
@group(0) @binding(3) var uTexture1: texture_2d<f32>;


struct FragkitVertexOut {
	@builtin(position) position: vec4f,
	@location(0) uv: vec2f,
};

@vertex
fn fragkitVertex(@builtin(vertex_index) index: u32) -> FragkitVertexOut {
	var positions = array<vec2f, 3>(
		vec2f(-1.0, -3.0),
		vec2f(-1.0, 1.0),
		vec2f(3.0, 1.0)
	);

	let position = positions[index];
	var out: FragkitVertexOut;
	out.position = vec4f(position, 0.0, 1.0);
	out.uv = (position + vec2f(1.0, 1.0)) * 0.5;
	return out;
}

fn frag(uv: vec2f) -> vec4f { return vec4f(uv, 0.0, 1.0); }

@fragment
fn fragkitFragment(in: FragkitVertexOut) -> @location(0) vec4f {
	
	let fragColor = frag(in.uv);
	let fragkitKeepAlive = fragkitUniforms.intensity.x;
	return vec4f(fragColor.rgb + fragkitKeepAlive * 0.0, fragColor.a);

}
"
`;
